update: 更新文件 installation_guide.md
Signed-off-by: mtl020901 <2650649367@qq.com>